--- a/popup/style.css
+++ b/popup/style.css
@@ -142,6 +142,7 @@
     .popup_body{
         width: 280px;
         height: 384px;
+        margin-top: 100px;
     }
     .logo{
         display: block; 
